before adding to srinikesh2929

--- a/index.html
+++ b/index.html
@@ -7,8 +7,52 @@
 </head>
 <body>
   <center>
-    <div>
-       
+    <div class='keys'>
+            <div data-key="65" class="key">
+                   <kbd>A</kbd>
+                  <span class="sound">CLAP</span>
+
+            </div>
+            <div data-key="83" class="key">
+                   <kbd>S</kbd>
+                  <span class="sound">HITHAT</span>
+
+            </div>
+            <div data-key="68" class="key">
+                   <kbd>D</kbd>
+                  <span class="sound">KICK</span>
+
+            </div>
+            <div data-key="70" class="key">
+                   <kbd>F</kbd>
+                  <span class="sound">OPENHAT</span>
+
+            </div> 
+            <div data-key="71" class="key">
+                   <kbd>G</kbd>
+                  <span class="sound">BOOM</span>
+
+            </div> 
+            <div data-key="72" class="key">
+                   <kbd>H</kbd>
+                  <span class="sound">RIDE</span>
+
+            </div> 
+            <div data-key="83" class="key">
+                   <kbd>S</kbd>
+                  <span class="sound">SNARE</span>
+
+            </div> 
+            <div data-key="83" class="key">
+                   <kbd>S</kbd>
+                  <span class="sound">TOM</span>
+
+            </div> 
+            <div data-key="83" class="key">
+                   <kbd>S</kbd>
+                  <span class="sound">TINK</span>
+
+            </div>          
     </div>
   </center>
     <audio data-key="65" src="clap.wav"></audio>
